Add POI functionalities
